@@ -168,6 +168,7 @@ E044,extras-openmoji,brand,youtube,"social, platform, video, brand",Romain Bazil
 E045,extras-openmoji,brand,github,"social, platform, code, git, brand",Romain Bazile,2019-09-06
 E280,extras-openmoji,smileys-emotion,exhausted face,"exhausted, sleepy, tired, face",Mariella Steeb,2018-04-18
 E281,extras-openmoji,smileys-emotion,incredulous face,"incredulous, disbelief, shocked",Mariella Steeb,2018-04-18
+E282,extras-openmoji,smileys-emotion,dejected face,"sigh, ._., pensive, disappointed",Carlin MacKenzie,2020-01-10
 E20B,extras-openmoji,travel-places,space shuttle,"nasa, shuttle, rocket, space, galaxy, adventure, alien, transportation",Ronja Bäurlen,2018-04-18
 E30A,extras-openmoji,healthcare,patient file,"hospital, record, filing",Tonia Reinhardt,2010-01-31
 E30B,extras-openmoji,healthcare,patient clipboard,"hospital, notes, transcript",Fanny Jung,2010-01-31
