@@ -57426,6 +57426,23 @@
     "order": ""
   },
   {
+    "emoji": "",
+    "hexcode": "E282",
+    "group": "extras-openmoji",
+    "subgroups": "smileys-emotion",
+    "annotation": "dejected face",
+    "tags": "",
+    "openmoji_tags": "sigh, ._., pensive, disappointed",
+    "openmoji_author": "Carlin MacKenzie",
+    "openmoji_date": "2020-01-10",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "",
+    "order": ""
+  },
+  {
     "emoji": "",
     "hexcode": "E380",
     "group": "extras-openmoji",
